@@ -22,7 +22,8 @@ CHANGELOG
 * Fixed a wrong link to student profile from students tab on a course edit screen.
 * Improved link building to student profile in admin area.
 * Fixed a bug with prerequisites courses when we have only one prerequisite course.
-* Improve select2 field for prerequisites and remove current course from the list.
+* Improved select2 field for prerequisites and remove current course from the list.
+* Improved MarketPress product thumbnail and images integration.
 
 = 2.0.4 =
 -------------------------------------------------
